# invoice-processor

./: .gitignore  Dockerfile  README.md  SRS.md  config.yaml  docker-compose.yml  invoice_processor.py  pyproject.toml  web_config.yaml
docs/: deployment.md  usage.md
invoices/: 20260617133811.ofd
src/config/: defaults.py  loader.py
src/extractor/: field_matcher.py  line_items.py  llm_fallback.py  normalizer.py
src/models/: enums.py  invoice.py  result.py
src/output/: excel_writer.py  stat_reporter.py
src/parser/: base.py  ocr_parser.py  ofd_parser.py
src/pipeline/: dedup.py  orchestrator.py  scanner.py
src/resources/: default_mapping.yaml
src/utils/: exceptions.py  file_utils.py  logger.py
tests/: conftest.py  test_config_loader.py  test_dedup.py  test_integration.py  test_invoice_model.py  test_line_items.py  test_logger.py  test_normalizer.py  test_scanner.py
web_api/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
web_api/models/: __init__.py  responses.py
web_api/routes/: __init__.py  batch.py  health.py  single.py
web_api/service/: __init__.py  batch_manager.py  extractor.py
web_api/tests/: __init__.py  conftest.py  test_batch.py  test_health.py  test_single.py
