[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-processor"
version = "1.0.0"
description = "发票批处理工具 — 批量识别、提取与结构化导出电子发票"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "InvoiceInfo Team"},
]

dependencies = [
    "lxml>=5.0",
    "PyMuPDF>=1.24",
    "paddleocr>=2.8",
    "opencv-python-headless>=4.9",
    "openpyxl>=3.1",
    "httpx>=0.28",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
invoice-processor = "invoice_processor:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing --cov-fail-under=35"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]
