[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-processor"
version = "1.0.0"
description = "发票批处理工具 — 批量识别、提取与结构化导出电子发票"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

authors = [
    {name = "InvoiceInfo Team"},
]

dependencies = [
    "lxml>=5.3",
    "PyMuPDF>=1.25",
    "paddleocr",
    # paddlepaddle 3.3.x 有 PIR 引擎兼容性问题（ConvertPirAttribute2RuntimeAttribute），
    # 使用 3.2.x 系列最新稳定版，待上游修复后放开版本限制
    "paddlepaddle>=3.2,<3.3",
    "opencv-python-headless>=4.10",
    "openpyxl>=3.1",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
]

[project.scripts]
invoice-processor = "invoice_processor:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing --cov-fail-under=35"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]
